# octopus-cms

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  example.env  forms.py  loadadmin.py  mail.py  models.py  pyproject.toml  requirements.txt  roadmap.md  routes.py  run.py
config/: __init__.py  config.py  create_super_admin_user.py  initialize_permissions.py  permissions_system.py
database/models/: __init__.py  association_tables.py  contact_message_model.py  posts_model.py  tags_models.py  users_model.py
forms/: mail_forms.py  posts_forms.py
mail/: __init__.py  auth_mail.py  newsletter_mail.py  notifications_mail.py  tokens_mail_generator.py
routes/: admin_routes.py  auth_routes.py  author_routes.py  main_routes.py  routes.py
server/: __init__.py  errors_handler.py  loadadmin.py  permissions.py  roles.py  server_extensions.py
server/forms/: __init__.py  auth_forms.py  posts_forms.py  tags_forms.py  visitors_forms.py
server/routes/: __init__.py  admin_routes.py  auth_routes.py  author_routes.py  health_routes.py  main_routes.py  routes.py  seo_routes.py
static/css/: styles.css
static/js/: main.js
templates/: 404.html  base.html  blog.html  contact.html  contact_messages.html  edit.html  forgot_password.html  login.html  new_post.html  newsletter.html  post.html  register.html  subscribe.html
templates/admin/: contact_messages.html  register.html  send_newsletter.html
templates/auth/: login.html  reset_password.html
templates/errors/: 403.html  404.html
utils/: __init__.py  seo_utils.py
(+19 files in other folders)
